--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom:  ['https://t.me/ChVivekTomar', 'https://t.me/ChVivekTomar']
+custom:  ['https://t.me/greymatters_about/13', 'https://t.me/greymatters_about/13']
